# xz2-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: main.yml  publish.yml  release.yml
examples/: unpack-archive.rs  unpack_archive.rs
liblzma-sys/: Cargo.toml  README.md  build.rs  config.h
liblzma-sys/src/: lib.rs
lzma-sys/: Cargo.toml  build.rs  config.h
lzma-sys/src/: lib.rs
src/: bufread.rs  lib.rs  read.rs  stream.rs  write.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs
tests/: bad-cat-alone.rs  xz.rs
