[package]
name = "liblzma"
version = "0.0.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["lzma", "xz", "encoding"]
repository = "https://github.com/portable-network-archive/liblzma-rs"
homepage = "https://github.com/portable-network-archive/liblzma-rs"
description = """
Rust bindings to liblzma providing Read/Write streams as well as low-level
in-memory encoding/decoding.
"""
categories = ["compression", "api-bindings"]
edition = "2018"

[workspace]
members = ["systest"]

[dependencies]
liblzma-sys = { path = "liblzma-sys", version = "0.0.0" }
tokio-io = { version = "0.1.12", optional = true }
futures = { version = "0.1.26", optional = true }

[dev-dependencies]
rand = "0.8.0"
quickcheck = "1.0.1"
tokio-core = "0.1.17"

[features]
tokio = ["tokio-io", "futures"]
static = ["liblzma-sys/static"]

[package.metadata.docs.rs]
features = ["tokio-io", "futures"]
